deploy/k8s/dapr/backgroundtasks.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: backgroundtasks
  namespace: eshop
  labels:
    app: eshop
    service: backgroundtasks
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backgroundtasks
  template:
    metadata:
      labels:
        app: eshop
        service: backgroundtasks
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "backgroundtasks"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: ordering-backgroundtasks
          image: eshop/ordering.backgroundtasks:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: ordering-backgroundtasks
  namespace: eshop
  labels:
    app: eshop
    service: backgroundtasks
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30006
      protocol: TCP
      name: http
  selector:
    service: backgroundtasks
