deploy/k8s/dapr/payment.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: payment
  namespace: eshop
  labels:
    app: eshop
    service: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: payment
  template:
    metadata:
      labels:
        app: eshop
        service: payment
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "payment-api"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: payment-api
          image: eshop/payment.api:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: payment-api
  namespace: eshop
  labels:
    app: eshop
    service: payment
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30004
      protocol: TCP
      name: http
  selector:
    service: payment
