deploy/k8s/dapr/signalr.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: signalr
  namespace: eshop
  labels:
    app: eshop
    service: signalr
spec:
  replicas: 1
  selector:
    matchLabels:
      service: signalr
  template:
    metadata:
      labels:
        app: eshop
        service: signalr
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "ordering-signalrhub"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: ordering-signalrhub
          image: eshop/ordering.signalrhub:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: ordering-signalrhub
  namespace: eshop
  labels:
    app: eshop
    service: signalr
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    service: signalr
