deploy/k8s/dapr/sqldata.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sqldata
  namespace: eshop
  labels:
    app: eshop
    service: sqldata
spec:
  replicas: 1
  selector:
    matchLabels:
      service: sqldata
  template:
    metadata:
      labels:
        app: eshop
        service: sqldata
    spec:
      containers:
        - name: sqldata
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - name: sqlserver
              containerPort: 1433
              protocol: TCP
---

kind: Service
apiVersion: v1
metadata:
  name: sqldata
  namespace: eshop
  labels:
    app: eshop
    service: sqldata
spec:
  ports:
    - port: 1433
      protocol: TCP
  selector:
    service: sqldata
