deploy/k8s/dapr/webshoppingagg.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: webshoppingagg
  namespace: eshop
  labels:
    app: eshop
    service: webshoppingagg
spec:
  replicas: 1
  selector:
    matchLabels:
      service: webshoppingagg
  template:
    metadata:
      labels:
        app: eshop
        service: webshoppingagg
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "webshoppingagg"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: webshoppingagg
          image: eshop/webshoppingagg:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: webshoppingagg
  namespace: eshop
  labels:
    app: eshop
    service: webshoppingagg
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    service: webshoppingagg
