deploy/k8s/dapr/webspa.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: webspa
  namespace: eshop
  labels:
    app: eshop
    service: webspa
spec:
  replicas: 1
  selector:
    matchLabels:
      service: webspa
  template:
    metadata:
      labels:
        app: eshop
        service: webspa
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "webspa"
        dapr.io/app-port: "80"
        dapr.io/config: "dapr-config"
    spec:
      containers:
        - name: webspa
          image: eshop/webspa:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---

kind: Service
apiVersion: v1
metadata:
  name: webspa
  namespace: eshop
  labels:
    app: eshop
    service: webspa
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
      protocol: TCP
      name: http
  selector:
    service: webspa
