deploy/k8s/dapr/webstatus.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: webstatus
  namespace: eshop
  labels:
    app: eshop
    service: webstatus
spec:
  replicas: 1
  selector:
    matchLabels:
      service: webstatus
  template:
    metadata:
      labels:
        app: eshop
        service: webstatus
    spec:
      containers:
        - name: webstatus
          image: eshop/webstatus:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---

kind: Service
apiVersion: v1
metadata:
  name: webstatus
  namespace: eshop
  labels:
    app: eshop
    service: webstatus
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
      protocol: TCP
      name: http
  selector:
    service: webstatus
