deploy/k8s/dapr/identity.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: identity
  namespace: eshop
  labels:
    app: eshop
    service: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      service: identity
  template:
    metadata:
      labels:
        app: eshop
        service: identity
    spec:
      containers:
        - name: identity-api
          image: eshop/identity.api:linux-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---

kind: Service
apiVersion: v1
metadata:
  name: identity-api
  namespace: eshop
  labels:
    app: eshop
    service: identity
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
      protocol: TCP
      name: http
  selector:
    service: identity

---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: identity
  namespace: eshop
  labels:
    app: eshop
    service: identity
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
        - path: /identity
          backend:
            serviceName: identity-api
            servicePort: 80
